Fixed TNT Mixin and Banner style combo. Craeted new Mixin for overlap and added styles for Meet component.

--- a/src/styles/Banner.scss
+++ b/src/styles/Banner.scss
@@ -15,6 +15,13 @@
   background-size: cover;
 
   &--inner {
+    position: absolute;
+    max-width: 900px;
+    width: 100%;
+    padding: 10px 15px;
+    top: 35%;
+    left: 50%;
+    transform: translate(-50%, -50%);
     @include title-and-tagline;
   }
 }
