--- a/src/styles/Meet.scss
+++ b/src/styles/Meet.scss
@@ -1,19 +1,32 @@
-.meet {
-  position: relative;
-  background-color: #45558d;
+@import "./mixins/TNT.scss";
+@import "./mixins/Overlap.scss";
 
-  &::before {
-    content: " ";
-    background-image: linear-gradient(
-      to left top,
-      #45558d 0%,
-      #45558d 50%,
-      transparent 50%
-    );
-    position: absolute;
+.meet {
+  @include overlap(left, #45558d);
+
+  &-inner {
+    display: flex;
+    max-width: 900px;
     width: 100%;
-    height: 100px;
-    bottom: 100%;
-    left: 0;
+    text-align: right;
+    margin: 0 auto;
+
+    &--content,
+    &--img-container {
+      margin: 0 10px;
+    }
+
+    &--content {
+      flex: 1;
+      @include title-and-tagline;
+    }
+
+    &--img-container {
+      &__img {
+        // Make text wrap around image
+        // https://css-tricks.com/almanac/properties/s/shape-outside/
+        border-radius: 50%;
+      }
+    }
   }
 }
