--- a/src/styles/mixins/TNT.scss
+++ b/src/styles/mixins/TNT.scss
@@ -1,14 +1,6 @@
 $hr-space: 20px;
 
 @mixin title-and-tagline {
-  position: absolute;
-  max-width: 900px;
-  width: 100%;
-  padding: 10px 15px;
-  top: 35%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-
   &__title {
     &::after {
       content: " ";
